syntax = "proto3";

package proto;

message HeartbeatRequest {
    string appID = 1;
}

message HeartbeatResponse {
    string appID = 1;
    int32 nodeID = 2;
}

service HeartbeatService {
    rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}
